# telegram_bot

./: .dockerignore  .env.example  .gitignore  API_SPEC.md  BROADCAST_CODE_TEMPLATES.md  BROADCAST_QUICK_REFERENCE.md  BROADCAST_START_HERE.md  BROADCAST_SYSTEM_PLAN.md  DOCKER_MAKEFILE_GUIDE.md  Dockerfile  Dockerfile.admin  EMAIL_SETUP.md  FILES_MANIFEST.txt  IMPLEMENTATION_ROADMAP_SUMMARY.md  MIGRATION_IMPLEMENTATION_SUMMARY.md  Makefile  PLAN_SUMMARY.txt  POSTGRESQL_MIGRATION.md  PROJECT_STRUCTURE.txt  README.md  SETUP_GUIDE.md  SUPPORT_IMPLEMENTATION.md  TEST_RESULTS.md  VISUAL_EXAMPLES.md  VISUAL_IMPROVEMENTS.md  __init__.py  bot.py  config.py  docker-compose.admin.yml  docker-compose.prod.yml  docker-compose.yml  docker-entrypoint.sh  init_db.py  logs-bot.sh  main.py  monitor.sh  pyproject.toml  requirements.txt  restart-bot.sh  settings.py  (+5 more)
admin_panel/: __init__.py  apps.py  manage.py  settings.py  urls.py  wsgi.py
config/: __init__.py  email_settings.py  settings.py
handlers/: __init__.py  contact.py  menu.py  start.py
keyboards/: __init__.py  admin_keyboards.py  inline.py  reply.py
messages/: __init__.py  texts.py
migrations/: 001_rename_roles.py  002_add_user_fields.py  003_add_entry_flags.py  004_add_registration_status.py  005_create_time_slot_tables.py  006_create_broadcast_tables.py  007_add_rating_fields.py  __init__.py  migration_manager.py
models/: __init__.py  broadcast.py  competition.py  jury_panel.py  registration.py  time_slot.py  user.py  voter_jury_panel.py  voter_time_slot.py
scripts/: migrate_to_postgres.sh
services/: __init__.py
states/: __init__.py  admin.py  contact.py  registration.py
utils/: __init__.py  admin_check.py  database.py  helpers.py  notifications.py  serializers.py  (+1 more)
(+33 files in other folders)
