[tool.poetry]
name = "telegram-bot"
version = "1.0.0"
description = "Telegram bot with Django admin panel for competition management"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "3.4.1"
python-dotenv = "1.0.0"
sqlalchemy = "2.0.23"
Django = "4.2.8"
django-extensions = "3.2.3"
aiosmtplib = "3.0.1"
jinja2 = "3.1.3"
asyncpg = "0.29.0"
psycopg2-binary = "2.9.9"
pydantic = "2.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
